--- a/Area_of_a_circle.ipynb
+++ b/Area_of_a_circle.ipynb
@@ -2,26 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Radius of Circle is 2\n",
-      "12.56\n"
+      "Radius of Circle is 3\n",
+      "28.26\n",
+      "18.84\n"
      ]
     }
    ],
    "source": [
-    "# This is program to calculate area of a circle\n",
+    "# This is program to calculate area of a circle and perimeter of a circle\n",
     "\n",
     "pi = 3.14\n",
     "radius = float(input(\"Radius of Circle is \"))\n",
     "area_of_circle = pi * (radius**2)\n",
-    "print(area_of_circle)"
+    "perimeter_of_circle = 2 * pi * radius\n",
+    "print(area_of_circle)\n",
+    "print(perimeter_of_circle)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
