updated with additional programs

--- a/Conditional_statements_exercises.ipynb
+++ b/Conditional_statements_exercises.ipynb
@@ -194,6 +194,123 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the string_1: science\n",
+      "Enter the string_2: see\n",
+      "valid\n"
+     ]
+    }
+   ],
+   "source": [
+    "#program8 \n",
+    "\n",
+    "#two strings from user\n",
+    "#string 1: python  ==> first + middle + last \n",
+    "#string 2: ptn\n",
+    "\n",
+    "#valid otherwise invalid\n",
+    "\n",
+    "a = input(\"Enter the string_1: \")\n",
+    "b = input(\"Enter the string_2: \")\n",
+    "c = a[0] + a[int(len(a)/2)] + a[-1]\n",
+    "if b == c:\n",
+    "    print(\"valid\")\n",
+    "else:\n",
+    "    print(\"invalid\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the string_1: mathematics\n",
+      "Enter the string_2: gabrielu\n",
+      "Number of vowels in mathematics is 4\n",
+      "Number of vowels in gabrielu is 4\n",
+      "Vowel count in mathematics and gabrielu is equal to 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "#program9:\n",
+    "\n",
+    "#two strings from user\n",
+    "\n",
+    "#mathematics ===> 4 vowels\n",
+    "#science ==> 3 vowels\n",
+    "\n",
+    "#both are equal count or not equal\n",
+    "a = input(\"Enter the string_1: \")\n",
+    "b = input(\"Enter the string_2: \")\n",
+    "count_1 = 0\n",
+    "count_2 = 0\n",
+    "for ch in a:\n",
+    "    if (ch==\"a\" or ch==\"A\" or ch=='e' or ch=='E' or ch=='i' or ch=='I' or ch=='o' or ch=='O' or ch=='u' or ch=='U'):\n",
+    "        count_1 = count_1 + 1\n",
+    "print(\"Number of vowels in {0} is {1}\".format(a,count_1))\n",
+    "for c in b:\n",
+    "    if (c==\"a\" or c==\"A\" or c=='e' or c==\"E\" or c==\"i\" or c==\"I\" or c==\"o\" or c==\"O\" or c==\"u\" or c==\"U\"):\n",
+    "        count_2 = count_2 + 1\n",
+    "print(\"Number of vowels in {0} is {1}\".format(b,count_2))\n",
+    "if count_1 == count_2:\n",
+    "    print(\"Vowel count in {0} and {1} is equal to {2}\".format(a,b,count_1))\n",
+    "else:\n",
+    "    print(\"Vowel count in {0} and {1} are not equal\".format(a,b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter one integer: 153\n",
+      "['1', '5', '3']\n",
+      "3\n",
+      "153\n",
+      "153 is a armstrong number\n"
+     ]
+    }
+   ],
+   "source": [
+    "#program10\n",
+    "\n",
+    "#get one integer from user\n",
+    "#armstrong or no (without using loops)\n",
+    "\n",
+    "#153 ===> 1^3 + 5^3 + 3^3\n",
+    "#370 ===> 3^3 + 7^3 + 0^3\n",
+    "#371 ====> 3^3 + 7^3 + 1^3\n",
+    "\n",
+    "a = input(\"Enter one integer: \")\n",
+    "b = list(a)\n",
+    "c = int(len(b))\n",
+    "print(b)\n",
+    "print(c)\n",
+    "d = int(b[0])**c + int(b[1])**c + int(b[2])**c\n",
+    "print(d)\n",
+    "if d == int(a):\n",
+    "    print(\"{} is a armstrong number\".format(a))\n",
+    "else:\n",
+    "    print(\"{} is not a armstrong number\".format(a))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
