updated with dictionaries merging

--- a/Data_structures_exercises.ipynb
+++ b/Data_structures_exercises.ipynb
@@ -173,6 +173,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 'physics', 2: 'chemistry', 3: 'Economics', 4: 'Civics', 5: 'physics', 6: 'physics', 10: 'biology'}\n",
+      "{1: 'physics', 2: 'chemistry', 3: 'Economics', 4: 'Civics', 5: 'physics', 6: 'physics', 10: 'biology'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#update\n",
+    "\n",
+    "a = {1 : \"physics\", 2 : \"chemistry\", 3: \"Economics\", 4:\"Civics\", 5:\"Zoology\", 6:\"physics\"}\n",
+    "b = {10:\"biology\", 5:\"physics\"}\n",
+    "a.update(b)\n",
+    "print(a) \n",
+    "\n",
+    "#c = a+b ===> Concatenation is not possible\n",
+    "\n",
+    "c = {1 : \"physics\", 2 : \"chemistry\", 3: \"Economics\", 4:\"Civics\", 5:\"Zoology\", 6:\"physics\"}\n",
+    "d = {10:\"biology\", 5:\"physics\"}\n",
+    "x = {**c,**d}\n",
+    "print(x)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
