updated loop exercises with additional programs

--- a/Loop Exercises.ipynb
+++ b/Loop Exercises.ipynb
@@ -68,7 +68,7 @@
     "    if (i>0) and (i%2 == 0):   ## Need to understand why only if works & not elif\n",
     "        even += 1\n",
     "        even_list.append(i)\n",
-    "    if (i>0) and (i%2 != 0):\n",
+    "    elif (i>0) and (i%2 != 0):\n",
     "        odd += 1\n",
     "        odd_list.append(i)\n",
     "print(\"No. of zeros in the list is \",zero)\n",
@@ -131,6 +131,116 @@
     "    if i%8 == 0:\n",
     "        d.append(i)\n",
     "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter first number: 2\n",
+      "Enter second number: 25\n",
+      "2 - No fizz and buzz\n",
+      "3 is a multiple of 3 - fizz\n",
+      "4 - No fizz and buzz\n",
+      "5 is a multiple of 5 - buzz\n",
+      "6 is a multiple of 3 - fizz\n",
+      "7 - No fizz and buzz\n",
+      "8 - No fizz and buzz\n",
+      "9 is a multiple of 3 - fizz\n",
+      "10 is a multiple of 5 - buzz\n",
+      "11 - No fizz and buzz\n",
+      "12 is a multiple of 3 - fizz\n",
+      "13 - No fizz and buzz\n",
+      "14 - No fizz and buzz\n",
+      "15 is a multiple of 3 - fizz\n",
+      "16 - No fizz and buzz\n",
+      "17 - No fizz and buzz\n",
+      "18 is a multiple of 3 - fizz\n",
+      "19 - No fizz and buzz\n",
+      "20 is a multiple of 5 - buzz\n",
+      "21 is a multiple of 3 - fizz\n",
+      "22 - No fizz and buzz\n",
+      "23 - No fizz and buzz\n",
+      "24 is a multiple of 3 - fizz\n",
+      "25 is a multiple of 5 - buzz\n"
+     ]
+    }
+   ],
+   "source": [
+    "#program3:\n",
+    "\n",
+    "#two numbers from user 2 25\n",
+    "#2 \n",
+    "#3  fizz\n",
+    "#4\n",
+    "#15\n",
+    "#16\n",
+    "#25\n",
+    "\n",
+    "#multiple of 3 ==> fizz\n",
+    "#multiple of 5 ==> buzz\n",
+    "#multiple of 15 ==> fizzbuzz\n",
+    "#Others ===> No fizz and buzz\n",
+    "\n",
+    "#Including last number\n",
+    "a = int(input(\"Enter first number: \"))\n",
+    "b = int(input(\"Enter second number: \"))\n",
+    "while (a<=b):\n",
+    "    if a%3 == 0:\n",
+    "        print(\"{} is a multiple of 3 - fizz\".format(a))\n",
+    "    elif a%5 == 0:\n",
+    "        print(\"{} is a multiple of 5 - buzz\".format(a))\n",
+    "    elif a%15 == 0:\n",
+    "        print(\"{} is a multiple of 15 - fizzbuzz\".format(a))\n",
+    "    else:\n",
+    "        print(\"{} - No fizz and buzz\".format(a))\n",
+    "    a += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the number: 7\n",
+      "7 is a prime number\n"
+     ]
+    }
+   ],
+   "source": [
+    "#program 4\n",
+    "\n",
+    "#check whether it's prime or no\n",
+    "\n",
+    "#10\n",
+    "\n",
+    "#2 up to 10 ===> 2,3,4,5,6,7,8,9\n",
+    "\n",
+    "#3 % 2\n",
+    "\n",
+    "#4 \n",
+    "#2,3\n",
+    "\n",
+    "#for else stmt\n",
+    "num = int(input(\"Enter the number: \"))\n",
+    "\n",
+    "if num > 1:\n",
+    "    for i in range(2,num):\n",
+    "        if num%i == 0:\n",
+    "            print(\"{} is not a prime number\".format(num))\n",
+    "            break\n",
+    "    else:\n",
+    "            print(\"{} is a prime number\".format(num))\n",
+    "\n"
    ]
   },
   {
