corrected the program

--- a/Loop Exercises.ipynb
+++ b/Loop Exercises.ipynb
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
       "12 is a multiple of 3 - fizz\n",
       "13 - No fizz and buzz\n",
       "14 - No fizz and buzz\n",
-      "15 is a multiple of 3 - fizz\n",
+      "15 is a multiple of 15 - fizzbuzz\n",
       "16 - No fizz and buzz\n",
       "17 - No fizz and buzz\n",
       "18 is a multiple of 3 - fizz\n",
@@ -191,12 +191,12 @@
     "a = int(input(\"Enter first number: \"))\n",
     "b = int(input(\"Enter second number: \"))\n",
     "while (a<=b):\n",
-    "    if a%3 == 0:\n",
+    "    if a%15 == 0:\n",
+    "        print(\"{} is a multiple of 15 - fizzbuzz\".format(a))\n",
+    "    elif a%3 == 0:\n",
     "        print(\"{} is a multiple of 3 - fizz\".format(a))\n",
     "    elif a%5 == 0:\n",
     "        print(\"{} is a multiple of 5 - buzz\".format(a))\n",
-    "    elif a%15 == 0:\n",
-    "        print(\"{} is a multiple of 15 - fizzbuzz\".format(a))\n",
     "    else:\n",
     "        print(\"{} - No fizz and buzz\".format(a))\n",
     "    a += 1"
@@ -204,15 +204,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the number: 7\n",
-      "7 is a prime number\n"
+      "Enter the number: 1728\n",
+      "1728 is not a prime number\n"
      ]
     }
    ],
